css/basic.less
//TODO: clean up less file

body {
  //TODO: nicer fonts some day
}

.mdl-button--icon {
  .material-icons {
    text-shadow: none;
  }
}

.material-icons {
  //text-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

.page-content {
  a,
  a:link,
  a:active,
  a:visited,
  a:hover {
    color: #3986dd;
    text-decoration: none;
  }
  a:hover {
    text-decoration: underline;
  }
  h1, h2, h3, h4, h5, h6 {
    //TODO: nice heading styles
  }
  blockquote{
    font-size: 1.2em;
    letter-spacing: 0px;
    min-width: 20%;
    margin: 1em 1em;
    color: #555555;
    font-style: normal;
    padding: 1.2em 30px 1.2em 10px;// 75px;
    border-left: 8px solid #909090 ;
    line-height:1.4;
    position: relative;
    background:#EDEDED;
  }

  table{
    background: white;
    border-radius: 6px;
    border-collapse: collapse;
    max-width: 600px;
    padding: 12px;
    width: 100%;
    ._shadow_0dp;
  }

  th {
    color: @light_primary;
    background: rgba(0, 0, 0, 0.64);
    font-size: 1.5em;
    font-weight: 100;
    padding: 12px;
    text-align:left;
    vertical-align:middle;
  }

  th:first-child {
    border-top-left-radius: 6px;
  }

  th:last-child {
    border-top-right-radius: 6px;
    border-right:none;
  }

  tr {
    color:#666B85;
    font-size: 1em;
    font-weight:normal;
  }

  tr:first-child {
    border-top: 6px;
  }

  tr:nth-child(odd) td {
    background: rgba(0,0,0,0.05 );
  }

  td {
    background:#FFFFFF;
    padding: 12px 12px;
    text-align:left;
    vertical-align:middle;
    font-size:1em;
  }

  /*blockquote::before{
    font-family:Arial;
    content: "\201C";
    color:#78C0A8;
    font-size:4em;
    position: absolute;
    left: 10px;
    top:-10px;
  }*/

  blockquote::before{
    content: '';
  }

  blockquote::after{
    content: '';
  }

  blockquote cite{
    display:block;
    color:#333333;
    font-style: normal;
    font-weight: bold;
    margin-top:1em;
  }
}

@media (min-width: 1025px) {
  .page-content {
    margin-left: 16px;
  }
}

@media (min-width: 1600px) {
  .page-content {
    width: 1200px;
    margin: 0 auto;
  }
}

@media (min-width: 2000px) {
  .page-content {
    width: 1400px;
    margin: 0 auto;
  }
}

.mdl-logo {
  a {
    color: @light_primary;
    text-decoration: none;
  }
}

.content-search__popup {
  background: #fff;
  width: 100%;
  ._shadow_1dp;
  margin-top: -10px;
  padding-top: 10px;
  strong{
    padding: 1em;
  }
}

.drawer-top {
  background: @primary;
  padding: 5px 0 20px;
  min-height: 15em;
  box-shadow: inset 0px -1px 4px 0px rgba(0,0,0,0.7);
  ._shadow_1dp;
  .mdl-logo{
    margin-bottom: 15px;
    img{
      width: 100%;
    }
  }
}

.drawer-tagline {
  color: @light_primary;
  margin: 1em;
  text-align: center;
  font-size: 1.3em;
}

.mdl-navigation {
  margin-top: 16px;
  a{
    color: @light_secondary;
    text-decoration: none;
    margin: 10px;
    font-size: 14px;
    font-weight: 400;
    line-height: 24px;
    letter-spacing: 0;
  }
}

.content-title {
  font-size: 2em !important;
  font-weight: bold;
}

.content-notif {
  margin: 1em 2em;
}

.content-youarehere {
  margin: 1em 2em;
  margin-right: 48px;
  background: transparent;
  color: rgba(0,0,0,0.8);
  p {
    line-height: 2em;
    padding-left: 1em;
  }
}

.content-actions {
  position: absolute;
  right: 0;
  top: 10px;
  margin-right: -30px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.content-actions__container {
  position: fixed;
  margin: 0px -55px;
}

.content-actions__action {
  padding: .3em 0;
  svg{
    fill: #fff;
    stroke: #fff;
    color: #fff;
  }
}

.content-actions__action-button {
  ._shadow_hover;
  ._shadow_2dp;
}

.content-card {
  ._shadow_1dp;
  margin: 2em;
  background: #fff;
  position: relative;
  margin-right: 48px;
  min-height: 300px;
}

.content-card__title {
  padding: 1px 1em;
  padding-left: 2em;
  ._shadow_0dp;
  margin-bottom: 10px;
  h1{
    margin: 12px 0px;
  }
}

.content-card__text > .sectionedit1 {
  display:none;
}

.content-card__text {
  padding: 2em;
  padding-top: 0.5em;
  /*

  TODO: nicely format lists

  .toc, .idx {
    .level1 {
      list-style: decimal;
      margin-left: 1em;
    }
    .level2 {
      list-style: lower-roman;
      margin-left: 2em;
    }
  }
  .idx {
    li {
      list-style: decimal;
      margin-left: 1em;
    }
  }


  //TODO: proper heading sizes
  h1 {
    font-size: 3em
  }
  h2 {
    font-size: 2em
  }
  h3 {
    font-size: 1.5em
  }
  h4 {
    font-size: 1em;
  }
  */
  h2,h3,h4,h5,h6 {
    font-weight: 300;
  }
  .edit {
    width: 98%;
  }
  #size__ctl{
    display: none;
  }
  .editButtons {
    button {
      background: transparent;
      border: none;
      border-radius: 2px;
      color: rgb(0, 0, 0);
      position: relative;
      height: 32px;
      margin: .5em 1em;
      min-width: 48px;
      padding: 0 12px;
      display: inline-block;
      font-family: "Roboto", "Helvetica", "Arial", sans-serif;
      font-size: 14px;
      font-weight: 500;
      text-transform: uppercase;
      letter-spacing: 0;
      overflow: hidden;
      will-change: box-shadow;
      transition: box-shadow 0.2s cubic-bezier(0.4, 0, 1, 1), background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1), color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
      outline: none;
      cursor: pointer;
      text-decoration: none;
      text-align: center;
      line-height: 36px;
      vertical-align: middle;
      background: rgba(158, 158, 158, 0.20);
      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
    }
    button::-moz-focus-inner {
      border: 0;
    }
    button:hover {
      background-color: rgba(158, 158, 158, 0.20);
    }
    button:focus:not(:active) {
      box-shadow: 0 0 8px rgba(0, 0, 0, 0.18), 0 8px 16px rgba(0, 0, 0, 0.36);
      background-color: rgba(158, 158, 158, 0.40);
    }
    button:active {
      box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
      background-color: rgba(158, 158, 158, 0.40);
    }
    #edbtn__save {
      background: @ini_accent;
      color: rgb(255,255,255)
    }
    .toolbutton {
      background: transparent;
    }
  }
}

#config__manager{
  fieldset{
    background: #fff;
    ._shadow_1dp;
    margin: 16px 0px;
    table{
      width: auto;
    }
    .value{
      width: auto;
    }
  }
}

#config__manager tr.default .input, #config__manager tr.default input, #config__manager tr.default textarea, #config__manager tr.default select, #config__manager .selectiondefault {
  background-color: #fff;
}

.secedit {
  button {
    background: transparent;
    border: none;
    border-radius: 2px;
    color: rgb(0, 0, 0);
    position: relative;
    height: 32px;
    margin: 0;
    min-width: 48px;
    padding: 0 12px;
    display: inline-block;
    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
    font-size: 14px;
    font-weight: 500;
    text-transform: uppercase;
    letter-spacing: 0;
    overflow: hidden;
    will-change: box-shadow;
    transition: box-shadow 0.2s cubic-bezier(0.4, 0, 1, 1), background-color 0.2s cubic-bezier(0.4, 0, 0.2, 1), color 0.2s cubic-bezier(0.4, 0, 0.2, 1);
    outline: none;
    cursor: pointer;
    text-decoration: none;
    text-align: center;
    line-height: 36px;
    vertical-align: middle;
    background: rgba(158, 158, 158, 0.20);
    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
  }
  button::-moz-focus-inner {
    border: 0;
  }
  button:hover {
    background-color: rgba(158, 158, 158, 0.20);
  }
  button:focus:not(:active) {
    box-shadow: 0 0 8px rgba(0, 0, 0, 0.18), 0 8px 16px rgba(0, 0, 0, 0.36);
    background-color: rgba(158, 158, 158, 0.40);
  }
  button:active {
    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
    background-color: rgba(158, 158, 158, 0.40);
  }
}

.ui-admin {
  svg{
    fill: @primary;
  }
}

.mdl-mini-footer {
  min-height: max-content;
  .mdl-mini-footer__left-section {
    overflow: hidden;
    padding-left: 12px;
  }
}

